--- a/src/lib/scss/_themes.scss
+++ b/src/lib/scss/_themes.scss
@@ -4,14 +4,16 @@
 	@include define-color('primary', #6E29E7);
 	@include define-color('primary-shade', #b28cf2);	
 	@include define-color('primary-tint', #f9f6fe);
-
+	// add css for header title background
+	@include define-color('title-backgroud-start', rgba(247, 169, 80, 0.5));
+	@include define-color('title-backgroud-end', rgba(255, 255, 255, 0.3));
 	@include define-color('secondary', #ff571a);
 	@include define-color('secondary-shade', #ffa280);
 	@include define-color('secondary-tint', #fff8f5);
 
 	@include define-color('yellow', #ffd400);
 
-	@include define-color('text', #1c1e26);
+	@include define-color('text', #0505059d);
 	@include define-color('text-shade', #5d5f65);
 	@include define-color('text-inverse', #ffffff);
 	@include define-color('text-inverse-shade', #9eb4b5);
@@ -30,15 +32,18 @@
 	@include define-color('callout-accent--error', #f95256);
 	@include define-color('callout-background--success', #dcf7ec);
 	@include define-color('callout-accent--success', #009f70);
+	// @include define-back('backgroud',);
 
 	// Used for Code Block component
 	@include define-color('code-background', #1c1e26);
 	@include define-color('code-text', #ffffff);
 	@include define-color('code-inline-background', #e3e3e3);
 
+	@include define-variable('photo-background', 'url(http://img.netbian.com/file/2024/0409/0018201IxUo.jpg)');
+	// --card-backgroud: url(--variable-card-background);
 	--color--waves-start: rgba(var(--color--primary-rgb), 0.3);
 	--color--waves-end: rgba(var(--color--primary-rgb), 0.1);
-
+	// --card-backgroud: url('http://img.netbian.com/file/2024/0409/0018201IxUo.jpg');
 	--card-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.1);
 	--card-shadow-hover: 0px 4px 10px 8px rgb(0 0 0 / 10%);
 	--image-shadow: 8px 14px 38px rgba(39, 44, 49, 0.06), 1px 3px 8px rgba(39, 44, 49, 0.03);
@@ -48,6 +53,9 @@
 	@include define-color('primary', #9f67ff);
 	@include define-color('primary-shade', #4612A1);	
 	@include define-color('primary-tint', #231934);
+
+	@include define-color('title-backgroud-start', rgba(95, 152, 226, 0.5));
+	@include define-color('title-backgroud-end', rgba(255, 255, 255, 0.3));
 
 	@include define-color('secondary', #ff723f);
 	@include define-color('secondary-shade', #AB3307);
@@ -76,13 +84,16 @@
 	@include define-color('callout-accent--success', #00c48f);
 
 	@include define-color('code-inline-background', #2b3131);
+	@include define-variable('photo-background', 'url(http://www.panguidc.com/images/2024/02/20/0fa2d94043b6169ff3a783c467900d36.jpeg)');
+
 }
 
 :root {
 	@include base-theme;
-
+	
 	&[data-theme='dark'] {
 		@include dark-theme;
+		// --card-backgroud: url('http://www.panguidc.com/images/2024/02/20/0fa2d94043b6169ff3a783c467900d36.jpeg');
 	}
 
 	&[data-theme='auto'] {
